--- a/style.css
+++ b/style.css
@@ -1,1 +1,55 @@
-/* write your code here */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    margin: 0;
+    padding: 0;
+}
+
+.profile {
+    text-align: center;
+    background-color: #001b55;
+    color: #fff;
+    padding: 20px;
+}
+
+.profile img {
+    width: 250px;
+    height: 350px;
+    border-radius: 5%;
+}
+
+.details {
+    max-width: 600px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    margin: 10px 0;
+}
+
+p {
+    margin: 10px 0;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+ul li {
+    margin: 5px 0;
+}
+
+a {
+    text-decoration: none;
+    color: #3498db;
+}
+
+.sub-title {
+    margin : 5px
+    align: left
+}
